# JaxTransformerManipulation

./: README.md  pyproject.toml
src/equibox_manipulation/: .gitgnore
src/equibox_manipulation/examples/: model_tree.txt  train_transcoder.py
src/equibox_manipulation/examples/smoketests/: compare_buffer_implementations.py  smoketest_buffer.py  smoketest_sae_module.py  smoketest_sae_trainer.py  test.py  test2.py
src/equibox_manipulation/hooks/: hooks.py
src/equibox_manipulation/transcoder/sparse_module_training/: SeassionLoader.py  config.py  make_llama_inputs.py  run_with_cache.py  utils.py
src/equibox_manipulation/transcoder/sparse_module_training/activations_store/: ActivationsStore.py  BufferManager.py  DataLoaderManager.py  DatasetManager.py
src/equibox_manipulation/transcoder/sparse_module_training/train_transcoder/: HookFactory.py  train_sae_on_language_model.py
src/equibox_manipulation/transcoder/sparse_module_training/train_transcoder/evaluation/: ModuleEvaluator.py  run_evaluations.py
src/equibox_manipulation/transcoder/sparse_module_training/train_transcoder/logger/: WandBLogger.py  save_at_checkpoint.py  update_progress_bar.py
src/equibox_manipulation/transcoder/sparse_module_training/train_transcoder/resamling_methods/: FeatureResampler.py
src/equibox_manipulation/transcoder/sparse_module_training/train_transcoder/trainer/: Losses.py  ModuleOptimizer.py  (+1 more)
src/equibox_manipulation/transcoder/sparse_module_training/transcoder_module/: GhostGradHandler.py  Persistor.py  b_dec_Initiator.py  load_sae_module.py  sparse_autoencoder.py
(+7 files in other folders)
